--- a/graphiql.html
+++ b/graphiql.html
@@ -11,7 +11,7 @@
 <div id="graphiql" style="height: 100vh;">Loading...</div>
 <script>
     function graphQLFetcher(graphQLParams) {
-        return fetch("/query", {
+        return fetch("/graphql", {
             method: "post",
             headers: {
                 'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjcmVhdGVkX2F0IjoiMjAxOC0wMS0zMVQwOTo1MzowMS43ODc0MTZaIiwiZXhwIjoxNTE3NTAxMTQ3LCJpZCI6Ik16RmtObVJsWlRBdE56bGtOUzAwTWpRekxXSTVZall0TUdJMFpEWTBZelpqTXpjMCIsImlzcyI6ImdvLWdyYXBocWwtc3RhcnRlciJ9.jL_hggTXAJEcA0TLYNFWdhv5dkigpZyknkRaTjI4g_U',
